--- a/issnedir.html
+++ b/issnedir.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>isim</title>
+    <title>Grup-T</title>
 
     <meta charset="utf-8">
 
@@ -79,7 +79,7 @@
 
             <ul class="nav navbar-nav">
 
-                <li><a href="javascript:void(0);"><span style="font-size: 24px;"><strong>isim</strong></span> </a></li>
+                <li><a href="javascript:void(0);"><span style="font-size: 24px;"><strong>Grup-T</strong></span> </a></li>
 
             </ul>
 
@@ -180,13 +180,13 @@
 
     <div class="card visible-lg visible-md">
 
-              <a href="javascript:void(0);"><img src="assets/img/isim.jpg" alt="BlogResim" class="card-image"></a>
+              <a href="javascript:void(0);"><img src="assets/img/Grup-T.jpg" alt="BlogResim" class="card-image"></a>
 
               <div class="card-block">
 
                   <h4 class="card-title"></h4>
 
-                  <p class="card-text faint-text">3.Sınıf BÖTE öğrencisiyim. BTO312 - Çoklu Ortama Tasarımı ve Üretimi dersi kapsamında projeyisini hazırlıyorum.</p>
+                  <p class="card-text faint-text">3.Sınıf BÖTE öğrencisiyiz. BTO312 - Çoklu Ortama Tasarımı ve Üretimi dersi kapsamında projeyisini hazırlıyoruz.</p>
 
               </div>
 
@@ -207,7 +207,7 @@
             <div class="container">
               <div class="wsite-section-elements">
                 <h2 class="wsite-content-title" style="text-align:left;"><font size="6">İSS</font></h2>
-                <div class="paragraph" style="text-align:left;display:block;"><strong><em><u><font><font color="#c23b3b">isim</font></font></u></em></strong></span></div><h2 class="wsite-content-title" style="text-align:left;"><font size="5">İSS Nedir?</font><br>
+                <div class="paragraph" style="text-align:left;display:block;"><strong><em><u><font><font color="#c23b3b">Grup-T</font></font></u></em></strong></span></div><h2 class="wsite-content-title" style="text-align:left;"><font size="5">İSS Nedir?</font><br>
                             </h2>
                 <div class="row" style="margin-top: 30px">
                   <div class="col-md-3"></div>
@@ -308,7 +308,11 @@
         <div class="col-md-3 col-sm-6 col-xs-12">
 
             <h5>İletişim</h5>
-            <h4 style="color: #aaa !important">isim@hacettepe.edu.tr</h4>
+            <h4 style="color: #aaa !important"><a href="http://berfinozluk.me" target="_blank">Berfin ÖZLÜK</a></h4>
+            <h4 style="color: #aaa !important"><a href="http://mertakhan.me" target="_blank">Mert AKHAN</a></h4>
+            <h4 style="color: #aaa !important"><a href="http://onurtafli.me" target="_blank">Onur TAFLI</a></h4>
+            <h4 style="color: #aaa !important"><a href="http://onury.me" target="_blank">Onur YILMAZ</a></h4>
+            <h4 style="color: #aaa !important"><a href="http://ulukanbaskaynak.me" target="_blank">Ulukan BAŞKAYNAK</a></h4>
 
         </div>
 
