--- a/index.html
+++ b/index.html
@@ -252,6 +252,13 @@
                 <h2 class="wsite-content-title" style="text-align:left;"><font size="6">Web Terminolojisi </font></h2>
                 <div class="paragraph" style="text-align:left;display:block;"><strong><em><u><font><font color="#c23b3b">Grup-T</font></font></u></em></strong</div>
                 <div>
+                    <ul>
+<li>Berfin ÖZLÜK</li>
+<li>Mert AKHAN</li>
+<li>Onur TAFLI</li>
+<li>Onur YILMAZ</li>
+<li>Ulukan BAŞKAYNAK</li>
+                    </ul>
                   <div class="wsite-multicol">
                     <div class="wsite-multicol-table-wrap" style="margin:0 -15px;">
                       <table class="wsite-multicol-table">
